--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html2pdf.js": "^0.12.1",
     "jsonwebtoken": "^9.0.3",
     "jspdf": "^3.0.4",
+    "openai": "^6.10.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "sqlite3": "^5.1.7"
