--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@google/genai": "^1.24.0",
+    "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
-    "better-sqlite3": "^12.5.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
+    "better-sqlite3": "^12.6.2",
+    "cheerio": "^1.2.0",
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "html2pdf.js": "^0.12.1",
     "jsonwebtoken": "^9.0.3",
     "jspdf": "^3.0.4",
+    "multer": "^2.0.2",
     "openai": "^6.10.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
